// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaField /> AfterDelete story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":ri:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":rj:"
    class="textarea"
    id=":ri:"
    maxlength="209"
    placeholder="Enter long-form text here"
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note textarea-field__field-note"
      id=":rj:"
    >
      Longer Field description
    </div>
    <div
      class="textarea-field__character-counter"
    >
      <span
        class=""
      >
        209
      </span>
       
      / 
      209
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> Default story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":r0:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":r1:"
    aria-label="Text Label"
    class="textarea"
    id=":r0:"
    placeholder="Enter long-form text here"
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note textarea-field__field-note"
      id=":r1:"
    >
      Longer Field description
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> UsingChildren story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":r2:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":r3:"
    class="textarea"
    id=":r2:"
    placeholder="Enter long-form text here"
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note textarea-field__field-note"
      id=":r3:"
    >
      Longer Field description
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDisabled story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline textarea-field__overline--disabled"
  >
    <label
      class="label"
      for=":r6:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":r7:"
    aria-disabled="true"
    class="textarea textarea--disabled"
    id=":r6:"
    placeholder="Enter long-form text here"
    readonly=""
    rows="2"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note field-note--disabled textarea-field__field-note"
      id=":r7:"
    >
      Longer Field description
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenError story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":r8:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":r9:"
    class="textarea error"
    id=":r8:"
    placeholder="Enter long-form text here"
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note field-note--error textarea-field__field-note"
      id=":r9:"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      Text should be at least 100 characters
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenInvalid story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":ra:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":rb:"
    class="textarea error"
    id=":ra:"
    maxlength="10"
    placeholder="Enter long-form text here"
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note field-note--error textarea-field__field-note"
      id=":rb:"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      Longer Field description
    </div>
    <div
      class="textarea-field__character-counter"
    >
      <span
        class="textarea-field--invalid-length"
      >
        210
      </span>
       
      / 
      10
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenRequired story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":rc:"
    >
      Textarea Field
       
    </label>
    <p
      class="text text--sm"
    >
      Required
    </p>
  </div>
  <textarea
    aria-describedby=":rd:"
    class="textarea"
    id=":rc:"
    placeholder="Enter long-form text here"
    required=""
    rows="5"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note textarea-field__field-note"
      id=":rd:"
    >
      Longer Field description
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithADifferentSize story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":re:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    aria-describedby=":rf:"
    class="textarea"
    id=":re:"
    placeholder="Enter long-form text here"
    rows="10"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note textarea-field__field-note"
      id=":rf:"
    >
      Longer Field description
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":rg:"
    >
      Textarea Field
       
    </label>
    <p
      class="text text--sm"
    >
      Required
    </p>
  </div>
  <textarea
    aria-describedby=":rh:"
    class="textarea error"
    id=":rg:"
    maxlength="144"
    placeholder="Enter long-form text here"
    required=""
    rows="10"
  >
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
  </textarea>
  <div
    class="textarea-field__footer"
  >
    <div
      class="field-note field-note--error textarea-field__field-note"
      id=":rh:"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      Longer Field description
    </div>
    <div
      class="textarea-field__character-counter"
    >
      <span
        class="textarea-field--invalid-length"
      >
        210
      </span>
       
      / 
      144
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithNoDefaultValue story renders snapshot 1`] = `
<div
  class="textarea-field"
>
  <div
    class="textarea-field__overline"
  >
    <label
      class="label"
      for=":r4:"
    >
      Textarea Field
       
    </label>
  </div>
  <textarea
    class="textarea"
    id=":r4:"
    placeholder="Enter long-form text here"
    rows="5"
  />
</div>
`;
